sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:4: error: '(' expected but identifier found.
      if !plusPetit(i,i-1) {echange(i,i-1)}
         ^AlgBubbleSort1:6: error: illegal start of simple expression
    }
    ^